[project]
name = "colab-shell"
version = "0.1.0"
description = "Drop into a Google Colab terminal from your local machine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-auth-oauthlib",
    "google-auth",
    "requests",
    "websocket-client",
    "truststore>=0.10.4",
]

[project.scripts]
cterm = "colab_shell.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["colab_shell"]
