[project]
name = "colab-shell"
version = "0.1.0"
description = "Drop into a Google Colab terminal from your local machine"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Dhananjaya Wijesiri" },
]
keywords = ["colab", "google", "terminal", "proxy", "ssh"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "google-auth>=2.28",
    "google-auth-oauthlib>=1.2",
    "requests>=2.31",
    "websocket-client>=1.6",
    "truststore>=0.10.4",
]

[project.urls]
"Source" = "https://github.com/dhananjaya-wijesiri/colab-shell"
"Bug Tracker" = "https://github.com/dhananjaya-wijesiri/colab-shell/issues"

[project.scripts]
cterm = "colab_shell.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["colab_shell"]
